# NGIN.Base

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  ConcurrentHashMapPlan.md  ExecutionPlan.md  LibraryPlan.md  MemoryPlan.md  NGINLibDummy.cpp  OptimizationPlan.md  Plan.MD  Plan.md  README.md  SIMDPlan.md  SchedulerPlan.md  Storage.md  StringPlan.md
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt  CallableBenchmarks.cpp  ConcurrentMapBench.cpp  CryptoAeadBenchmarks.cpp  CryptoBackendDispatchBenchmarks.cpp  CryptoHashBenchmarks.cpp  CryptoKeyFormatBenchmarks.cpp  CryptoParserBenchmarks.cpp  CryptoRandomBenchmarks.cpp  ExampleBenchmark.cpp  FiberBenchmarks.cpp  JsonBenchmarks.cpp  SIMDFastMathBench.cpp  SchedulerBenchmarks.cpp  StringBenchmarks.cpp  VectorBenchmarks.cpp  XmlBenchmarks.cpp
benchmarks/cmake/: FindDoubleConversion.cmake
cmake/: BoostUT.cmake  NGINBaseCPack.cmake  NGINBaseComponents.cmake  NGINBaseConfig.cmake.in  NGINBaseInstall.cmake  NGINBaseOptions.cmake  NGINBasePlatform.cmake  NGINBaseSources.cmake  NGINBaseSplitTargets.cmake  NGINBaseSubdirectories.cmake  NGINBaseTargets.cmake  NGINBaseWarnings.cmake
docs/: Async.md  AsyncHardeningPlan.md  AsyncPlan.md  AsyncSimplificationPlan.md  BaseModularizationPlan.md  ConcurrentHashMapPlan.md  Crypto.md  CryptoPlan.md  CryptoPlatformAndInteropPlan.md  FileSystemPlan.md  IO.md  Memory.md  Network.md  NetworkPlan.md  README.md  SerializationPlan.md  Text.md
examples/: CMakeLists.txt
examples/CryptoCapabilities/: CMakeLists.txt  main.cpp
examples/CryptoCookbook/: CMakeLists.txt  main.cpp
examples/Sandbox/: CMakeLists.txt  main.cpp
examples/UnitsExample/: CMakeLists.txt  main.cpp
include/NGIN/: Benchmark.hpp  Defines.hpp  NGIN.hpp  Primitives.hpp  SIMD.hpp  Timer.hpp  Units.hpp  Units2.hpp
include/NGIN/Async/: AsyncError.hpp  AsyncGenerator.hpp  AtomicCondition.hpp  Cancellation.hpp  Completion.hpp  FIFOSpinLock.hpp  Fiber.hpp  Fiber.new.hpp  Fiber.posix.hpp  Fiber.win32.hpp  FiberScheduler.hpp  Generator.hpp  ILockable.hpp  IScheduler.hpp  InlineScheduler.hpp  Mutex.hpp  ReadWriteLock.hpp  RecursiveMutex.hpp  Semaphore.hpp  SharedMutex.hpp  SpinLock.hpp  Task.hpp  TaskContext.hpp  Thread.hpp  Thread.posix.hpp  Thread.win32.hpp  ThreadPoolScheduler.hpp  WhenAll.hpp  WhenAny.hpp
include/NGIN/Containers/: ConcurrentHashMap.hpp  HashMap.hpp  String.hpp  Vector.hpp
include/NGIN/Crypto/: Algorithm.hpp  AsymmetricCipher.hpp  ByteBuffer.hpp  Concepts.hpp  Crypto.hpp  Encoding.hpp  HMAC.hpp  Hash.hpp  Hasher.hpp  KDF.hpp  README.md  Random.hpp  Random.impl.hpp  Random.posix.hpp  Random.win32.hpp  Result.hpp  SecureBuffer.hpp  Signature.hpp  Symmetric.hpp  SymmetricCipher.hpp  Types.hpp  Utils.hpp
include/NGIN/Exceptions/: Exception.hpp  NotSupportedException.hpp
include/NGIN/Execution/: Concepts.hpp  Config.hpp  CooperativeScheduler.hpp  ExecutorRef.hpp  Fiber.hpp  FiberScheduler.hpp  IScheduler.hpp  InlineScheduler.hpp  README.md  ThisFiber.hpp  ThisThread.hpp  Thread.hpp  ThreadName.hpp  ThreadPoolScheduler.hpp  WorkItem.hpp
include/NGIN/Hashing/: CRC.hpp  Checksum.hpp  FNV.hpp
include/NGIN/IO/: AsyncDirectoryHandle.hpp  AsyncFileHandle.hpp  DirectoryEnumerator.hpp  DirectoryHandle.hpp  DynamicLibrary.hpp  File.hpp  FileHandle.hpp  FileSystemDriver.hpp  FileSystemTypes.hpp  FileSystemUtilities.hpp  FileView.hpp  IAsyncFileHandle.hpp  IAsyncFileSystem.hpp  IByteReader.hpp  IDirectoryEnumerator.hpp  IDirectoryHandle.hpp  IFileHandle.hpp  IFileSystem.hpp  IOError.hpp  IOResult.hpp  LocalFileSystem.hpp  MemoryReader.hpp  Path.hpp  VirtualFileSystem.hpp
include/NGIN/Math/: BigInt.hpp  Ratio.hpp
include/NGIN/Memory/: AllocationHelpers.hpp  AllocatorConcept.hpp  AllocatorRef.hpp  BumpArena.hpp  EpochReclaimer.hpp  FallbackAllocator.hpp  HalfPointer.hpp  IAllocator.hpp  LinearAllocator.hpp  LinearAllocatorOld.hpp  Mallocator.hpp  PointerMath.hpp  PolyAllocator.hpp  README.md  SmartPointers.hpp  (+5 more)
src/: CoreInit.cpp
tests/: CMakeLists.txt  HashCrcChecksumTests.cpp  Units.cpp  main.cpp
tests/Async/: AsyncGenerator.cpp  AtomicCondition.cpp  Cancellation.cpp  ContinueWith.cpp  Fiber.cpp  Generator.cpp  Task.cpp  TaskContext.cpp  Then.cpp  When.cpp
tests/Containers/: ConcurrentHashMap.cpp  ConcurrentHashMapCoverage.cpp  ConcurrentHashMapDiagnosticsTests.cpp  ConcurrentHashMapStress.cpp  HashMap.cpp  String.cpp  Vector.cpp
tests/Crypto/: Aead.cpp  Asymmetric.cpp  Backend.cpp  Certificate.cpp  ConstantTime.cpp  CryptoError.cpp  Encoding.cpp  Hash.cpp  Kdf.cpp  KeyFormat.cpp  Mac.cpp  ProviderConformance.cpp  Random.cpp  Secret.cpp  SecureBuffer.cpp  Signature.cpp  Token.cpp  ZeroMemory.cpp
tests/Crypto/Fuzz/: DerFuzzer.cpp  JwtFuzzer.cpp  KeyFormatFuzzer.cpp  PasetoFuzzer.cpp  PemFuzzer.cpp  X509Fuzzer.cpp
tests/Crypto/ProviderVectors/: AeadVectors.hpp  HashVectors.hpp  HmacVectors.hpp  KdfVectors.hpp  KeyAgreementVectors.hpp  SignatureVectors.hpp
tests/Execution/: CooperativeScheduler.cpp  Thread.cpp  WorkItem.cpp
tests/IO/: DynamicLibrary.cpp  FilePrimitives.cpp  LocalFileSystemTests.cpp  PathTests.cpp  VirtualFileSystemTests.cpp
tests/IO/fixtures/: DynamicLibraryFixture.cpp
tests/Include/: Crypto.cpp  Execution.cpp  Foundation.cpp  IO.cpp  Net.cpp  Serialization.cpp
tests/Math/: BigIntTest.cpp
tests/Memory/: AllocationHelpersTests.cpp  BumpArenaTests.cpp  FallbackAllocatorTests.cpp  FallbackThreadSafeTests.cpp  HalfPointerTests.cpp  LinearAllocator.cpp  SmartPtrTests.cpp  StorageForTests.cpp  ThreadSafeAllocatorTests.cpp  TrackingAllocatorTests.cpp  UnionStorageForTests.cpp
tests/Meta/: FunctionTraits.cpp  TypeName.cpp  TypeTraits.cpp
tests/Net/: NetSocketTests.cpp
tests/SIMD/: VecScalarTests.cpp
tests/Serialization/: JsonParserTests.cpp  XmlParserTests.cpp
tests/Text/: String.cpp  Unicode.cpp
tests/Time/: PlatformTime.cpp
tests/Utilities/: Any.cpp  ExpectedTests.cpp  OptionalTests.cpp  StringInterner.cpp
tests/Utils/: Callable.cpp  LSBFLag.cpp  MSBFlag.cpp  Units2Test.cpp
tests/cmake/: NGINBaseTestHelpers.cmake
(+244 files in other folders)
